--- a/src/app/components/stock-sentiment/stock-sentiment.component.html
+++ b/src/app/components/stock-sentiment/stock-sentiment.component.html
@@ -15,6 +15,10 @@
           </p>
           <p>MSPR: {{ sentiment.mspr }}</p>
         </span>
+
+        <span>
+          <img src="/assets/red-arrow.jpg" />
+        </span>
       </ng-container>
     </div>
 
