--- a/src/app/components/stocks-container/individual-stock/individual-stock.component.html
+++ b/src/app/components/stocks-container/individual-stock/individual-stock.component.html
@@ -1,4 +1,4 @@
-<div class="individual-stock-container" *ngIf="stock">
+<div *ngIf="stock" class="individual-stock-container">
   <div class="stock-header">
     <h3 class="title">{{ stock.profile.name }} ({{ stock.symbol }})</h3>
     <span>
